# PEA_Zad3

./: .gitignore  CMakeLists.txt  LICENSE
algorithms/: genetic.cpp  genetic.h  geneticBase.cpp  geneticBase.h  geneticOX.cpp  geneticOX.h  geneticPMX.cpp  geneticPMX.h
data/: dataGenerator.cpp  dataGenerator.h  fileOperator.cpp  fileOperator.h
inheritance/: childA.cpp  childA.h  childB.cpp  childB.h  parent.cpp  parent.h
menu/: main.cpp
tests/: tester.cpp  tester.h
